--- a/app/views/root.html
+++ b/app/views/root.html
@@ -1,78 +1,83 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-        <meta name="generator" content="Hugo 0.84.0">
-        <title>Sensor API Current Data</title>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.84.0">
+    <title>Sensor API Current Data</title>
 
-        <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
 
-        <!-- Bootstrap core CSS -->
-        <!-- CSS only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <!-- Icons -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-        <meta name="theme-color" content="#7952b3">
-
-
-
-    </head>
-
-    <body>
-        <main class="col-lg-8 mx-auto p-3 py-md-5">
-            <main>
-                <h1>Aktuelle Daten der Wetterstation</h1>
-                <br>
-
-                <div class="fs-5 col-md-8">
-                    <span>Automatischer Refresh alle 10 Sekunden</span>
-                    <div class="form-check form-switch form-check-inline">
-                        <input class="form-check-input" type="checkbox" role="switch" id="refresh_button2" checked/>
-                        <label class="form-check-label" for="refresh_button2"></label>
-                    </div>
-                </div>
-
-                <div class="fs-5 col-md-8">
-                   Jetzt aktualisieren: <button type="button" class="btn btn-primary btn-sm" onclick="update_data()"><i class="bi bi-arrow-repeat"></i></button>
-                </div>
-
-                <br>
-                <p class="fs-5 col-md-8"><strong>Aktuelle Uhrzeit:</strong> <span id="cur_time"></span> </p>
-                <p class="fs-5 col-md-8"><strong>Zeitpunkt des letzten Wertes:</strong> <span id="time"></span> </p>
-                <p class="fs-5 col-md-8"><strong>Temperatur BME280:</strong> <span id="temperature"></span>°C </p>
-                <p class="fs-5 col-md-8"><strong>Temperatur DS18B20:</strong> <span id="temperature_ds18b20"></span>°C </p>
-                <p class="fs-5 col-md-8"><strong>Luftfeuchtigkeit:</strong> <span id="humidity"></span>% </p>
-                <p class="fs-5 col-md-8"><strong>Gemessener Luftdruck:</strong> <span id="pressure"></span>hPa </p>
-                <p class="fs-5 col-md-8"><strong>Normalisierter Luftdruck auf Seehöhe:</strong> <span id="pressure_ASL"></span>hPa </p>
+    <!-- Bootstrap core CSS -->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <meta name="theme-color" content="#7952b3">
 
 
-            </main>
-        </main>
-    </body>
+</head>
+
+<body>
+<main class="col-lg-8 mx-auto p-3 py-md-5">
+    <main>
+        <h1>Aktuelle Daten der Wetterstation</h1>
+        <br>
+
+        <div class="fs-5 col-md-8">
+            <span>Automatischer Refresh alle 10 Sekunden</span>
+            <div class="form-check form-switch form-check-inline">
+                <input class="form-check-input" type="checkbox" role="switch" id="refresh_button2" checked/>
+                <label class="form-check-label" for="refresh_button2"></label>
+            </div>
+        </div>
+
+        <div class="fs-5 col-md-8">
+            Jetzt aktualisieren:
+            <button type="button" class="btn btn-primary btn-sm" onclick="update_data()"><i
+                    class="bi bi-arrow-repeat"></i></button>
+        </div>
+
+        <br>
+        <p class="fs-5 col-md-8"><strong>Aktuelle Uhrzeit:</strong> <span id="cur_time"></span></p>
+        <p class="fs-5 col-md-8"><strong>Zeitpunkt des letzten Wertes:</strong> <span id="time"></span></p>
+        <p class="fs-5 col-md-8"><strong>Temperatur BME280:</strong> <span id="temperature"></span>°C </p>
+        <p class="fs-5 col-md-8"><strong>Temperatur DS18B20:</strong> <span id="temperature_ds18b20"></span>°C </p>
+        <p class="fs-5 col-md-8"><strong>Luftfeuchtigkeit:</strong> <span id="humidity"></span>% </p>
+        <p class="fs-5 col-md-8"><strong>Gemessener Luftdruck:</strong> <span id="pressure"></span>hPa </p>
+        <p class="fs-5 col-md-8"><strong>Normalisierter Luftdruck auf Seehöhe:</strong> <span id="pressure_ASL"></span>hPa
+        </p>
+
+
+    </main>
+</main>
+</body>
 </html>
 
 <script>
     // When page has loaded
-    $( document ).ready(function()
-    {
+    $(document).ready(function () {
         refreshTime();
-        $.getJSON( "/get_latest", function( data ) {
+        $.getJSON("/get_latest", function (data) {
             jsonParse(data)
         });
     });
 
     // Function to go through the requested JSON file and update the fields
-    function jsonParse(data)
-    {
+    function jsonParse(data) {
         const pressures = ["pressure", "pressure_ASL"];
         const to_round = ["pressure", "pressure_ASL", "temperature", "temperature_ds18b20"];
-        const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: "numeric",
-            minute: "numeric", second: "numeric",};
+        const options = {
+            weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: "numeric",
+            minute: "numeric", second: "numeric",
+        };
 
         $.each(data, function (key, val) {
             if (pressures.includes(key)) {
@@ -91,8 +96,7 @@
     }
 
     // Create the HTTP Request to get the newest sensor data and call the JSON parser
-    function update_data()
-    {
+    function update_data() {
         $.getJSON("/get_latest", function (data) {
             jsonParse(data)
         });
@@ -101,20 +105,21 @@
     // For the automatic refresh of the sensor data, we first need to check if the checkmark is set
     // If so, call the update data function
     // Runs every 10 seconds
-    function conditional_update_data()
-    {
+    function conditional_update_data() {
         if ($('#refresh_button2').is(':checked')) {
             update_data()
         }
     }
+
     setInterval(conditional_update_data, 10000);
 
     //Every second we update the current time
-    function refreshTime()
-    {   const options = { hour: "numeric", minute: "numeric", second: "numeric",};
+    function refreshTime() {
+        const options = {hour: "numeric", minute: "numeric", second: "numeric",};
         const timeDisplay = document.getElementById("cur_time");
         timeDisplay.textContent = new Date().toLocaleTimeString('de-DE', options);
     }
+
     setInterval(refreshTime, 1000);
 
 </script>
